# cfa_azure

./: .coverage  .coveragerc  .gitignore  .lintr  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  DISCLAIMER.md  README.md  automation_README.md  cfa_azure_overview.md  clients_README.md  metaflow_config.py  pyproject.toml  setup.py  yaml-test.yaml
.github/ISSUE_TEMPLATE/: cfa_azure_issue_template.md  config.yml  issue_template.md
.github/actions/pre-commit/: action.yaml
.github/workflows/: ci.yaml  ci.yml  pre-commit.yaml
cfa_azure/: __init__.py  automation.py  batch.py  batch_helpers.py  blob_helpers.py  clients.py  helpers.py
cfa_azure.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cfa_azure/local/: __init__.py  automation.py  batch.py  clients.py  helpers.py
docs/: ContainerAppClient_README.md  automation_README.md  blob_storage_batch_job.md  cfa_azure_overview.md  command_line_utilities_blob.md  local_README.md  querying_data_with_duckdb.md
examples/: client_configuration.toml  dev_autoscale_formula.txt  example_AzureClient.py  example_autoscale_formula.txt  example_config.toml  prod_autoscale_formula.txt
examples/DAGs/: README.md
examples/automation/: exp_config.toml  params.yaml  task_config.toml
examples/metaflow/: Dockerfile  README.md  __init__.py  azure_batch_decorator.py  main.py  main_parallel.py  main_parallel_dynamic.py  multiple_states.py  requirements.txt  states.txt
examples/metaflow/custom_metaflow/: cfa_batch_pool_service.py
examples/metaflow/custom_metaflow/plugins/decorators/: __init__.py  cfa_azure_batch_decorator.py
examples/metaflow/plugins/metadata_providers/: __init__.py  local.py
examples/metaflow/tests/: decorators.json  test_azure_batch_decorator_enhanced.py  test_azure_batch_decorator_unit.py  test_decorator_flow.py
tests/: __init__.py  batch_helpers_tests.py  batch_tests.py  blob_helpers_tests.py  clients_tests.py  fake_client.py  helper2_tests.py  helpers_tests.py  requirements.test.txt
