[tool.poetry]
name = "cfa_azure"
version = "1.1.6"
description = "module for use with Azure and Azure Batch"
authors = ["Ryan Raasch <xng3@cdc.gov>"]
readme = "README.md"
packages = [{include = "cfa_azure"}]

[tool.poetry.dependencies]
python = "^3.8"
azure-identity = "^1.16.1"
azure-keyvault = "^4.2.0"
azure-batch = "^14.0.0"
azure-mgmt-batch = "^17.1.0"
azure-mgmt-resource = "^21.2.1"
azure-storage-blob = "^12.17.0"
azure-containerregistry = "^1.2.0"
cryptography = "^43.0.1"
toml = "^0.10.2"
pandas = "*"
pathlib = "*"
docker = "*"
pyyaml = "*"
re = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_tests.py"]
