[tool.poetry]
name = "cfa_azure"
version = "1.5.8"
description = "module for use with Azure and Azure Batch"
authors = ["Ryan Raasch <xng3@cdc.gov>"]
readme = "README.md"
packages = [ { include = "cfa_azure" } ]
exclude = [ "tests*", "tests/*.py" ]

[tool.poetry.dependencies]
python = "^3.10"
azure-identity = "^1.16.1"
azure-keyvault = "^4.2.0"
azure-batch = "^14.0.0"
azure-mgmt-appcontainers = "^3.1.0"
azure-mgmt-batch = "^17.1.0"
azure-mgmt-resource = "^21.2.1"
azure-storage-blob = "^12.17.0"
azure-containerregistry = "^1.2.0"
cryptography = "^44.0.1"
toml = "^0.10.2"
pandas = "*"
pathlib = "*"
docker = "*"
pyyaml = "*"
polars = "*"
griddler = {git = "https://github.com/CDCgov/pygriddler.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_tests.py"]

[tool.poetry.scripts]
download_blob = "cfa_azure.blob_helpers:download_blob"
upload_blob = "cfa_azure.blob_helpers:upload_blob"

[tool.setuptools.packages.find]
include = ["cfa_azure*"]
exclude = ["docs*", "tests*"]
